# localmind

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: features.md  index.md  installation.md  usage.md
localmind/: __init__.py  classifier.py  cli.py  constants.py  doctor.py  hardware.py  models.py  ollama_api.py  recommendations.py  utils.py
site/: 404.html  index.html  sitemap.xml
site/features/: index.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: test_classifier.py  test_doctor.py  test_hardware.py  test_recommendations.py
