[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localmind"
version = "0.1.0"
description = "Understand your hardware and find the best local AI models for your machine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Manish Tiwari", email = "manish.tiwari.09@zohomail.in"}
]
keywords = ["ai", "llm", "local", "hardware", "recommender"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "psutil>=5.9",
    "requests>=2.31",
    "pydantic>=2.5",
    "gputil>=1.4; sys_platform != 'darwin'",   # optional, only where nvidia is common
]

[project.urls]
Homepage = "https://github.com/predictivemanish/localmind"
Documentation = "https://predictivemanish.github.io/localmind"
Repository = "https://github.com/predictivemanish/localmind"
Issues = "https://github.com/predictivemanish/localmind/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
localmind = "localmind.cli:app"
lm = "localmind.cli:app"

[tool.setuptools.packages.find]
include = ["localmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:GPUtil.*",
]